--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Wildbest</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -118,7 +121,7 @@
         <img src="assets/images/anuncio-2.jpg" alt="Anuncio 2">
       </div>
     </aside>
-    <footer>
+    <footer class="footer">
       Origamid © 2012 - 2017. Alguns direitos reservados.
     </footer>
   </div>
