--- a/index.html
+++ b/index.html
@@ -76,26 +76,26 @@
           <span class="label">age</span>
         </div>
       </div>
-      <p>
+      <p class="col-wide">
         É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico
       </p>
-      <img src="assets/images/wolf1.jpg" alt="Wolf 1">
-      <p>
+      <img class="image-1" src="assets/images/wolf1.jpg" alt="Wolf 1">
+      <p class="contrast">
         É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos.
       </p>
-      <img src="assets/images/wolf2.jpg" alt="Wolf 2">
+      <img class="image-2" src="assets/images/wolf2.jpg" alt="Wolf 2">
       <p>
         O peso e tamanho dos lobos variam muito em todo o mundo, tendendo a aumentar proporcionalmente com a latitude, como previsto pela teoria de Christian Bergmann. Em geral, a altura, medida a partir dos ombros, varia de 60 a 95 centímetros.
       </p>
       <p>
         O peso varia geograficamente. Em média, os lobos europeus pesam 38,5 kg; os lobos da América do Norte, 36 kg; os lobos indianos e árabes, 25 kg.[7] Embora raros, lobos com mais de 77 kg foram encontrados no Alasca, Canadá,[8] e na antiga União Soviética.
       </p>
-      <blockquote class="quote">
+      <blockquote class="quote col-wide">
         <p>
           “Há algo no uivar do lobo que tira um homem do aqui e agora e o transporta para uma floresta da mente.”
         </p>
       </blockquote>
-      <ul>
+      <ul class="attributes">
         <li>Surgiu: 12.000 anos</li>
         <li>Tipo: Mamífero</li>
         <li>Idade Média: 13 anos</li>
@@ -111,7 +111,7 @@
           É um sobrevivente da Era do Gelo, originário do Pleistoceno Superior, cerca de 300 mil anos atrás.[2] O sequenciamento de DNA e estudos genéticos reafirmam que o lobo cinzento é ancestral do cão doméstico.
         </p>
       </div>
-      <img src="assets/images/wolf3.jpg" alt="Wolf 3">
+      <img src="assets/images/wolf3.jpg" class="col-wide" alt="Wolf 3">
     </main>
     <aside class="ads">
       <div class="ad-item">
@@ -122,7 +122,7 @@
       </div>
     </aside>
     <footer class="footer">
-      Origamid © 2012 - 2017. Alguns direitos reservados.
+      <p>Origamid © 2012 - 2017. Alguns direitos reservados.</p>
     </footer>
   </div>
 </body>
